# cpp_project

./: .dev_config.yaml  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  REMOTE_DEVELOPMENT.md  build.bat  build.ps1  build.sh  dev_env.sh  docker_dev.sh  environment.yml  pyproject.toml  remote_dev.sh  test_cpp_ext.py  test_native_app.sh  test_python_ext.py  thirdparty_deps.yaml  vcpkg.json
.github/workflows/: build_wheels.yml
include/: sample.h
js_lib/: CMakeLists.txt
js_lib/include/js_lib/: logger.h  mm_processor.h
js_lib/src/: logger.cpp  mm_processor.cpp
linux_docker_dev/: Dockerfile  README.md  dev_env.sh  docker-compose.yml  docker_dev.sh  setup-ssh.sh
linux_docker_dev/custom-triplets/: x64-windows-custom.cmake
native_app/: CMakeLists.txt
native_app/src/: main.cpp
python/: CMakeLists.txt  bindings.cpp  test_joysort.py
python_ext/: CMakeLists.txt  test_js_ext.py
python_ext/src/: bindings.cpp  cpp_ext.cpp
scripts/: download_thirdparty.ps1  download_thirdparty.sh  linux_env_prepare.sh  macos_env_prepare.sh  python_env_manage.ps1  python_env_manage.sh  windows_env_prepare.ps1
src/: CMakeLists.txt  main.cpp
src/core/: logger.cpp  logger.h
src/include/: core_lib.hpp
src/python/: __init__.py  cpp_ext.cpp
tests/: CMakeLists.txt  test_core.cpp
triplets/: x64-osx-custom.cmake  x64-windows-custom.cmake
