[build-system]
requires = ["scikit-build-core>=0.4.3", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "py_core_lib"
version = "1.0.0"
description = "Python bindings for core_lib"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.args = ["-DBUILD_PYTHON_BINDINGS=ON"]
ninja.make-fallback = true
wheel.packages = ["python"]

[tool.cibuildwheel]
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*"]
skip = ["*-musllinux_*"]

# Linux specific settings
[tool.cibuildwheel.linux]
before-all = [
    "yum install -y gcc-c++ cmake ninja-build",
    "git clone https://github.com/Microsoft/vcpkg.git",
    "./vcpkg/bootstrap-vcpkg.sh"
]
environment = { VCPKG_ROOT = "./vcpkg" }

# macOS specific settings
[tool.cibuildwheel.macos]
before-all = [
    "brew install gcc cmake ninja",
    "git clone https://github.com/Microsoft/vcpkg.git",
    "./vcpkg/bootstrap-vcpkg.sh"
]
environment = { VCPKG_ROOT = "./vcpkg" }

# Windows specific settings
[tool.cibuildwheel.windows]
before-all = [
    "git clone https://github.com/Microsoft/vcpkg.git",
    ".\\vcpkg\\bootstrap-vcpkg.bat"
]
environment = { VCPKG_ROOT = "./vcpkg" }
